Working session decode on backend from login
